# LibCxxAndroid

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: config.cmake.in  target-static.cmake.in  target-static_no_rtti.cmake.in  target.cmake.in
include/: __config_site  __threading_support
